{
  "version": 4,
  "terraform_version": "1.5.5",
  "serial": 581,
  "lineage": "fb449d18-b947-9632-7347-7c53d44076f3",
  "resources": [
    {
      "module": "module.ec2_linux",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0d3183af565a0a95d",
            "arn": "arn:aws:ec2:us-east-2:591642074504:instance/i-0c8d95f638d07af98",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "drs_agent_installation_role",
            "id": "i-0c8d95f638d07af98",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "edmentum-ohio",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": true,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0ff81caf4114e8996",
            "private_dns": "ip-172-25-0-224.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.25.0.224",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": true,
                "iops": 100,
                "kms_key_id": "arn:aws:kms:us-east-2:591642074504:key/86d08e50-be3d-4a6c-96d6-faee63587fa7",
                "tags": {
                  "Name": "my-root-block"
                },
                "throughput": 0,
                "volume_id": "vol-0e0fb2999361bc7ae",
                "volume_size": 20,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c3ce80ed5acea60e",
            "tags": {
              "Name": "source-linux"
            },
            "tags_all": {
              "Name": "source-linux",
              "client": "edmentum",
              "owner": "sai",
              "project": "cloudendure to elastic DR",
              "site": "demo-source",
              "temporary": "yes",
              "terraform": "yes"
            },
            "tenancy": "default",
            "timeouts": {
            },
            "user_data_replace_on_change": true,
            "vpc_security_group_ids": [
              "sg-017f38df457440399"
            ]
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "data.aws_caller_identity.current",
            "module.ec2_linux.aws_iam_instance_profile.this",
            "module.ec2_linux.aws_iam_role.this",
            "module.ec2_linux.data.aws_iam_policy_document.assume_role_policy",
            "module.ec2_linux.data.aws_partition.current",
            "module.ec2_linux.data.aws_ssm_parameter.this",
            "module.iam_assumable_role_admin.aws_iam_instance_profile.this",
            "module.iam_assumable_role_admin.aws_iam_role.this",
            "module.iam_assumable_role_admin.data.aws_caller_identity.current",
            "module.iam_assumable_role_admin.data.aws_iam_policy_document.assume_role",
            "module.iam_assumable_role_admin.data.aws_iam_policy_document.assume_role_with_mfa",
            "module.iam_assumable_role_admin.data.aws_partition.current",
            "module.security-group.aws_security_group.this",
            "module.security-group.aws_security_group.this_name_prefix",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_windows_private",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0007e91afefcd1257",
            "arn": "arn:aws:ec2:us-east-2:591642074504:instance/i-0e6d045a7b014eee2",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "drs_agent_installation_role",
            "id": "i-0e6d045a7b014eee2",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "edmentum-ohio",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": true,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-048fea342f9d1d99f",
            "private_dns": "ip-172-25-0-99.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.25.0.99",
            "public_dns": "ec2-52-14-232-119.us-east-2.compute.amazonaws.com",
            "public_ip": "52.14.232.119",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 100,
                "kms_key_id": "arn:aws:kms:us-east-2:591642074504:key/86d08e50-be3d-4a6c-96d6-faee63587fa7",
                "tags": {
                  "Name": "my-root-block"
                },
                "throughput": 0,
                "volume_id": "vol-0da24f5bf7cb20cf0",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00a4a9783cdfdf38a",
            "tags": {
              "Name": "source-windows"
            },
            "tags_all": {
              "Name": "source-windows",
              "client": "edmentum",
              "owner": "sai",
              "project": "cloudendure to elastic DR",
              "site": "demo-source",
              "temporary": "yes",
              "terraform": "yes"
            },
            "tenancy": "default",
            "timeouts": {
            },
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e8c0ea060302a6c7"
            ]
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "data.aws_caller_identity.current",
            "module.ec2_windows_private.aws_iam_instance_profile.this",
            "module.ec2_windows_private.aws_iam_role.this",
            "module.ec2_windows_private.data.aws_iam_policy_document.assume_role_policy",
            "module.ec2_windows_private.data.aws_partition.current",
            "module.ec2_windows_private.data.aws_ssm_parameter.this",
            "module.iam_assumable_role_admin.aws_iam_instance_profile.this",
            "module.iam_assumable_role_admin.aws_iam_role.this",
            "module.iam_assumable_role_admin.data.aws_caller_identity.current",
            "module.iam_assumable_role_admin.data.aws_iam_policy_document.assume_role",
            "module.iam_assumable_role_admin.data.aws_iam_policy_document.assume_role_with_mfa",
            "module.iam_assumable_role_admin.data.aws_partition.current",
            "module.security-group.aws_security_group.this",
            "module.security-group.aws_security_group.this_name_prefix",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.security-group[\"ec2_linux\"]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:591642074504:security-group/sg-017f38df457440399",
            "description": "EDR Demo SG",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all egress",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-017f38df457440399",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow http Traffic",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ICMP",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "10.21.0.0/24"
                ],
                "description": "Traffic from Canada",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "172.25.0.0/24"
                ],
                "description": "Allow Any internal Traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "216.73.178.66/32"
                ],
                "description": "SSH Ingress",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "ec2_linux",
            "name_prefix": "",
            "owner_id": "591642074504",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ec2_linux"
            },
            "tags_all": {
              "Name": "ec2_linux",
              "client": "edmentum",
              "owner": "sai",
              "project": "cloudendure to elastic DR",
              "site": "demo-source",
              "temporary": "yes",
              "terraform": "yes"
            },
            "timeouts": {
              "create": "10m",
              "delete": "15m"
            },
            "vpc_id": "vpc-074ec1f61d0da2bab"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.security-group[\"ec2_linux\"]",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_with_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress",
            "from_port": 0,
            "id": "sgrule-4012411122",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-017f38df457440399",
            "security_group_rule_id": "sgr-0f265cd33689d7d69",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security-group.aws_security_group.this",
            "module.security-group.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.security-group[\"ec2_linux\"]",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "216.73.178.66/32"
            ],
            "description": "SSH Ingress",
            "from_port": 22,
            "id": "sgrule-789263664",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-017f38df457440399",
            "security_group_rule_id": "sgr-0d4458a2a58ab2170",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security-group.aws_security_group.this",
            "module.security-group.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "ICMP",
            "from_port": -1,
            "id": "sgrule-3040729183",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "icmp",
            "security_group_id": "sg-017f38df457440399",
            "security_group_rule_id": "sgr-047bfc73414dcac7c",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": -1,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security-group.aws_security_group.this",
            "module.security-group.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow http Traffic",
            "from_port": 80,
            "id": "sgrule-3155109068",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-017f38df457440399",
            "security_group_rule_id": "sgr-0c404ea45f1f3a794",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security-group.aws_security_group.this",
            "module.security-group.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "172.25.0.0/24"
            ],
            "description": "Allow Any internal Traffic",
            "from_port": 0,
            "id": "sgrule-2340903924",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-017f38df457440399",
            "security_group_rule_id": "sgr-040a3a06e13a9e9ba",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security-group.aws_security_group.this",
            "module.security-group.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.21.0.0/24"
            ],
            "description": "Traffic from Canada",
            "from_port": 0,
            "id": "sgrule-1013675067",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-017f38df457440399",
            "security_group_rule_id": "sgr-03a6d27e723a25341",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security-group.aws_security_group.this",
            "module.security-group.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.security-group[\"ec2_windows\"]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:591642074504:security-group/sg-0e8c0ea060302a6c7",
            "description": "EDR Demo SG",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all egress",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e8c0ea060302a6c7",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow http Traffic",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ICMP",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "172.25.0.0/24",
                  "10.21.0.0/24"
                ],
                "description": "Allow Any internal Traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "216.73.178.66/32"
                ],
                "description": "RDP",
                "from_port": 3389,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3389
              }
            ],
            "name": "ec2_windows",
            "name_prefix": "",
            "owner_id": "591642074504",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ec2_windows"
            },
            "tags_all": {
              "Name": "ec2_windows",
              "client": "edmentum",
              "owner": "sai",
              "project": "cloudendure to elastic DR",
              "site": "demo-source",
              "temporary": "yes",
              "terraform": "yes"
            },
            "timeouts": {
              "create": "10m",
              "delete": "15m"
            },
            "vpc_id": "vpc-074ec1f61d0da2bab"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.security-group[\"ec2_windows\"]",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_with_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress",
            "from_port": 0,
            "id": "sgrule-3770467119",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0e8c0ea060302a6c7",
            "security_group_rule_id": "sgr-011edeb266bf6ff57",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security-group.aws_security_group.this",
            "module.security-group.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.security-group[\"ec2_windows\"]",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "216.73.178.66/32"
            ],
            "description": "RDP",
            "from_port": 3389,
            "id": "sgrule-3309656473",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0e8c0ea060302a6c7",
            "security_group_rule_id": "sgr-02adb273fbed481ad",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 3389,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security-group.aws_security_group.this",
            "module.security-group.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "ICMP",
            "from_port": -1,
            "id": "sgrule-3565404064",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "icmp",
            "security_group_id": "sg-0e8c0ea060302a6c7",
            "security_group_rule_id": "sgr-0beb8065294c2b36c",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": -1,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security-group.aws_security_group.this",
            "module.security-group.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow http Traffic",
            "from_port": 80,
            "id": "sgrule-1673307398",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0e8c0ea060302a6c7",
            "security_group_rule_id": "sgr-0c153945eabfe76e0",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security-group.aws_security_group.this",
            "module.security-group.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "172.25.0.0/24"
            ],
            "description": "Allow Any internal Traffic",
            "from_port": 0,
            "id": "sgrule-3413455811",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0e8c0ea060302a6c7",
            "security_group_rule_id": "sgr-0502e3a79e2ed5527",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security-group.aws_security_group.this",
            "module.security-group.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.21.0.0/24"
            ],
            "description": "Allow Any internal Traffic",
            "from_port": 0,
            "id": "sgrule-285746641",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0e8c0ea060302a6c7",
            "security_group_rule_id": "sgr-0cedb4d259d2f931b",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security-group.aws_security_group.this",
            "module.security-group.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:591642074504:network-acl/acl-04431b341bde47405",
            "default_network_acl_id": "acl-04431b341bde47405",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-04431b341bde47405",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "591642074504",
            "subnet_ids": [
              "subnet-00a4a9783cdfdf38a",
              "subnet-0124a748b62b679d7",
              "subnet-041d2693f76beec71",
              "subnet-0c3ce80ed5acea60e"
            ],
            "tags": {
              "Name": "demo-source-vpc-default"
            },
            "tags_all": {
              "Name": "demo-source-vpc-default",
              "client": "edmentum",
              "owner": "sai",
              "project": "cloudendure to elastic DR",
              "site": "demo-source",
              "temporary": "yes",
              "terraform": "yes"
            },
            "vpc_id": "vpc-074ec1f61d0da2bab"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:591642074504:route-table/rtb-02c75312ac678cd51",
            "default_route_table_id": "rtb-02c75312ac678cd51",
            "id": "rtb-02c75312ac678cd51",
            "owner_id": "591642074504",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "172.26.0.0/24",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": "pcx-06247452f3cc318b0"
              }
            ],
            "tags": {
              "Name": "demo-source-vpc-default"
            },
            "tags_all": {
              "Name": "demo-source-vpc-default",
              "client": "edmentum",
              "owner": "sai",
              "project": "cloudendure to elastic DR",
              "site": "demo-source",
              "temporary": "yes",
              "terraform": "yes"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-074ec1f61d0da2bab"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:591642074504:security-group/sg-07a5a02cc0a2951d1",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-07a5a02cc0a2951d1",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "591642074504",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "demo-source-vpc-default"
            },
            "tags_all": {
              "Name": "demo-source-vpc-default",
              "client": "edmentum",
              "owner": "sai",
              "project": "cloudendure to elastic DR",
              "site": "demo-source",
              "temporary": "yes",
              "terraform": "yes"
            },
            "vpc_id": "vpc-074ec1f61d0da2bab"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-011539915385d924a",
            "association_id": "eipassoc-0a4a2d74f128e727c",
            "domain": "vpc",
            "id": "eipalloc-011539915385d924a",
            "network_border_group": "us-east-2",
            "network_interface": "eni-0bfe85548c9061b1c",
            "private_dns": "ip-172-25-0-39.us-east-2.compute.internal",
            "private_ip": "172.25.0.39",
            "public_dns": "ec2-3-138-163-112.us-east-2.compute.amazonaws.com",
            "public_ip": "3.138.163.112",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "demo-source-vpc-us-east-2a"
            },
            "tags_all": {
              "Name": "demo-source-vpc-us-east-2a",
              "client": "edmentum",
              "owner": "sai",
              "project": "cloudendure to elastic DR",
              "site": "demo-source",
              "temporary": "yes",
              "terraform": "yes"
            },
            "vpc": true
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-069eea9db8b9fc2d1",
            "association_id": "eipassoc-000f667fd1307895d",
            "domain": "vpc",
            "id": "eipalloc-069eea9db8b9fc2d1",
            "network_border_group": "us-east-2",
            "network_interface": "eni-035b2f6174e74e068",
            "private_dns": "ip-172-25-0-75.us-east-2.compute.internal",
            "private_ip": "172.25.0.75",
            "public_dns": "ec2-3-140-237-157.us-east-2.compute.amazonaws.com",
            "public_ip": "3.140.237.157",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "demo-source-vpc-us-east-2b"
            },
            "tags_all": {
              "Name": "demo-source-vpc-us-east-2b",
              "client": "edmentum",
              "owner": "sai",
              "project": "cloudendure to elastic DR",
              "site": "demo-source",
              "temporary": "yes",
              "terraform": "yes"
            },
            "vpc": true
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:591642074504:internet-gateway/igw-07c5966cd53af28bd",
            "id": "igw-07c5966cd53af28bd",
            "owner_id": "591642074504",
            "tags": {
              "Name": "demo-source-vpc"
            },
            "tags_all": {
              "Name": "demo-source-vpc",
              "client": "edmentum",
              "owner": "sai",
              "project": "cloudendure to elastic DR",
              "site": "demo-source",
              "temporary": "yes",
              "terraform": "yes"
            },
            "vpc_id": "vpc-074ec1f61d0da2bab"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-011539915385d924a",
            "association_id": "eipassoc-0a4a2d74f128e727c",
            "connectivity_type": "public",
            "id": "nat-04e545e15a3477120",
            "network_interface_id": "eni-0bfe85548c9061b1c",
            "private_ip": "172.25.0.39",
            "public_ip": "3.138.163.112",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0124a748b62b679d7",
            "tags": {
              "Name": "demo-source-vpc-us-east-2a"
            },
            "tags_all": {
              "Name": "demo-source-vpc-us-east-2a",
              "client": "edmentum",
              "owner": "sai",
              "project": "cloudendure to elastic DR",
              "site": "demo-source",
              "temporary": "yes",
              "terraform": "yes"
            }
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-069eea9db8b9fc2d1",
            "association_id": "eipassoc-000f667fd1307895d",
            "connectivity_type": "public",
            "id": "nat-01d05a2df2c63ae2f",
            "network_interface_id": "eni-035b2f6174e74e068",
            "private_ip": "172.25.0.75",
            "public_ip": "3.140.237.157",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-00a4a9783cdfdf38a",
            "tags": {
              "Name": "demo-source-vpc-us-east-2b"
            },
            "tags_all": {
              "Name": "demo-source-vpc-us-east-2b",
              "client": "edmentum",
              "owner": "sai",
              "project": "cloudendure to elastic DR",
              "site": "demo-source",
              "temporary": "yes",
              "terraform": "yes"
            }
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0ed53c97c0453732b1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-04e545e15a3477120",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0ed53c97c0453732b",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0317d4ab6b0ff467f1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-01d05a2df2c63ae2f",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0317d4ab6b0ff467f",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-07c5966cd53af28bd",
            "id": "r-rtb-0f9675157d1fb558f1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0f9675157d1fb558f",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:591642074504:route-table/rtb-0ed53c97c0453732b",
            "id": "rtb-0ed53c97c0453732b",
            "owner_id": "591642074504",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-04e545e15a3477120",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "172.26.0.0/24",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": "pcx-06247452f3cc318b0"
              }
            ],
            "tags": {
              "Name": "demo-source-vpc-private-us-east-2a"
            },
            "tags_all": {
              "Name": "demo-source-vpc-private-us-east-2a",
              "client": "edmentum",
              "owner": "sai",
              "project": "cloudendure to elastic DR",
              "site": "demo-source",
              "temporary": "yes",
              "terraform": "yes"
            },
            "timeouts": null,
            "vpc_id": "vpc-074ec1f61d0da2bab"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:591642074504:route-table/rtb-0317d4ab6b0ff467f",
            "id": "rtb-0317d4ab6b0ff467f",
            "owner_id": "591642074504",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-01d05a2df2c63ae2f",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "172.26.0.0/24",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": "pcx-06247452f3cc318b0"
              }
            ],
            "tags": {
              "Name": "demo-source-vpc-private-us-east-2b"
            },
            "tags_all": {
              "Name": "demo-source-vpc-private-us-east-2b",
              "client": "edmentum",
              "owner": "sai",
              "project": "cloudendure to elastic DR",
              "site": "demo-source",
              "temporary": "yes",
              "terraform": "yes"
            },
            "timeouts": null,
            "vpc_id": "vpc-074ec1f61d0da2bab"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:591642074504:route-table/rtb-0f9675157d1fb558f",
            "id": "rtb-0f9675157d1fb558f",
            "owner_id": "591642074504",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07c5966cd53af28bd",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "172.26.0.0/24",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": "pcx-06247452f3cc318b0"
              }
            ],
            "tags": {
              "Name": "demo-source-vpc-public"
            },
            "tags_all": {
              "Name": "demo-source-vpc-public",
              "client": "edmentum",
              "owner": "sai",
              "project": "cloudendure to elastic DR",
              "site": "demo-source",
              "temporary": "yes",
              "terraform": "yes"
            },
            "timeouts": null,
            "vpc_id": "vpc-074ec1f61d0da2bab"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a800447a58ae6ed0",
            "route_table_id": "rtb-0ed53c97c0453732b",
            "subnet_id": "subnet-041d2693f76beec71"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05c7f582be67f8de5",
            "route_table_id": "rtb-0317d4ab6b0ff467f",
            "subnet_id": "subnet-0c3ce80ed5acea60e"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08f6fbbb6ddbe9414",
            "route_table_id": "rtb-0f9675157d1fb558f",
            "subnet_id": "subnet-0124a748b62b679d7"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-031cfad619457bf27",
            "route_table_id": "rtb-0f9675157d1fb558f",
            "subnet_id": "subnet-00a4a9783cdfdf38a"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:591642074504:subnet/subnet-041d2693f76beec71",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "172.25.0.128/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-041d2693f76beec71",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "591642074504",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "demo-priv-subnet-us-east-2a"
            },
            "tags_all": {
              "Name": "demo-priv-subnet-us-east-2a",
              "client": "edmentum",
              "owner": "sai",
              "project": "cloudendure to elastic DR",
              "site": "demo-source",
              "temporary": "yes",
              "terraform": "yes"
            },
            "vpc_id": "vpc-074ec1f61d0da2bab"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:591642074504:subnet/subnet-0c3ce80ed5acea60e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "172.25.0.192/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c3ce80ed5acea60e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "591642074504",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "demo-priv-subnet-us-east-2b"
            },
            "tags_all": {
              "Name": "demo-priv-subnet-us-east-2b",
              "client": "edmentum",
              "owner": "sai",
              "project": "cloudendure to elastic DR",
              "site": "demo-source",
              "temporary": "yes",
              "terraform": "yes"
            },
            "vpc_id": "vpc-074ec1f61d0da2bab"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:591642074504:subnet/subnet-0124a748b62b679d7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "172.25.0.0/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0124a748b62b679d7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "591642074504",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "demo-pub-subnet-us-east-2a"
            },
            "tags_all": {
              "Name": "demo-pub-subnet-us-east-2a",
              "client": "edmentum",
              "owner": "sai",
              "project": "cloudendure to elastic DR",
              "site": "demo-source",
              "temporary": "yes",
              "terraform": "yes"
            },
            "vpc_id": "vpc-074ec1f61d0da2bab"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:591642074504:subnet/subnet-00a4a9783cdfdf38a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "172.25.0.64/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00a4a9783cdfdf38a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "591642074504",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "demo-pub-subnet-us-east-2b"
            },
            "tags_all": {
              "Name": "demo-pub-subnet-us-east-2b",
              "client": "edmentum",
              "owner": "sai",
              "project": "cloudendure to elastic DR",
              "site": "demo-source",
              "temporary": "yes",
              "terraform": "yes"
            },
            "vpc_id": "vpc-074ec1f61d0da2bab"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:591642074504:vpc/vpc-074ec1f61d0da2bab",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.25.0.0/24",
            "default_network_acl_id": "acl-04431b341bde47405",
            "default_route_table_id": "rtb-02c75312ac678cd51",
            "default_security_group_id": "sg-07a5a02cc0a2951d1",
            "dhcp_options_id": "dopt-b45637df",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-074ec1f61d0da2bab",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-02c75312ac678cd51",
            "owner_id": "591642074504",
            "tags": {
              "Name": "demo-source-vpc"
            },
            "tags_all": {
              "Name": "demo-source-vpc",
              "client": "edmentum",
              "owner": "sai",
              "project": "cloudendure to elastic DR",
              "site": "demo-source",
              "temporary": "yes",
              "terraform": "yes"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}